@@ -1,6 +1,7 @@
 ----------------------------------
 [2009-05-27 Ver 0.47 -> 0.48]
 - Fixed bug about resize width/height is lower than 1 pixel, imagecreatetruecolor cannot create new image.(thx takahashi)
+- Added 'Mobile Link Discovery' tag insert logic.
 ----------------------------------
 [2009-05-21 Ver 0.46 -> 0.47]
 - Fixed bug about width/height attribute exists in resized image tag.
